feat: 🎸 完成diy部分改造

--- a/15server.html
+++ b/15server.html
@@ -52,7 +52,7 @@
 
 
         var guac = new Guacamole.Client(
-            new Guacamole.WebSocketTunnel("ws://172.22.56.12:9632/webSocket?height=600&width=800&choice=ue&")
+            new Guacamole.WebSocketTunnel("ws://172.22.56.12:9632/webSocket?height=600&width=800&ip-key=ip2&port=6400&username=huangxiaojie&password=Aa123456&")
         );
 
 
